# apple_update_notification

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  apple_update_notification.py  check_action_releases.sh  create_lambda_package.sh  create_package.sh  create_tweet_lambda_package.sh  mydatabase.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: README.md  dependabot.yml
.github/workflows/: README.md  deploy.yaml  deploy.yml  deploy_env.yaml  format_code.yml  plan.yaml  plan_env.yaml
lambdas/: README.md  apple_send_update.py  apple_utils.py  apple_web_scrape.py
terraform/: README.md  acm.tf  alerts.tf  api_gateway.tf  apple_send_update_lambda.tf  apple_update_notification_lambda.tf  apple_web_scrape_lambda.tf  backend.develop.conf  backend.main.conf  cloudfront.tf  cloudwatch.tf  develop.tfvars  dynamodb.tf  lambda.tf  lambda_layer.tf  locals.tf  main.tf  main.tfvars  modules.tf  outputs.tf  route53.tf  s3.tf  variables.tf
terraform/modules/: README.md
terraform/modules/data-store/: README.md  main.tf
terraform/modules/lambda-service/: README.md  main.tf
terraform/modules/observability/: README.md  main.tf
terraform/modules/storage/: README.md  main.tf
tests/: README.md  test_apple_send_update_lambda.py  test_apple_utils.py  test_apple_web_scrape_lambda.py
